src/tests/evaluation_error/wrong_number_of_arguments/snapshots/monkey_interpreter__tests__evaluation_error__wrong_number_of_arguments__test_wrong_number_of_arguments_case_1_evaluation_error.snap
---
source: src/tests/evaluation_error/wrong_number_of_arguments/mod.rs
expression: error
---
Err(
    "Wrong number of arguments, want=2, got=1.",
)
