src/tests/evaluation_error/wrong_number_of_arguments/snapshots/monkey_interpreter__tests__evaluation_error__wrong_number_of_arguments__test_wrong_number_of_arguments_case_1_syntax_analysis.snap
---
source: src/tests/evaluation_error/wrong_number_of_arguments/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Call {
            function: Function {
                parameters: [
                    "x",
                    "y",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: Infix {
                                left_hand: Identifier {
                                    identifier: "x",
                                },
                                operator: Plus,
                                right_hand: Identifier {
                                    identifier: "y",
                                },
                            },
                        },
                    ],
                },
            },
            arguments: [
                Integer {
                    literal: 1,
                },
            ],
        },
    },
]
