src/tests/evaluation_error/wrong_number_of_arguments/snapshots/monkey_interpreter__tests__evaluation_error__wrong_number_of_arguments__test_wrong_number_of_arguments_case_2_lexical_analysis.snap
---
source: src/tests/evaluation_error/wrong_number_of_arguments/mod.rs
expression: tokens
---
[
    Let,
    Identifier {
        literal: "add",
    },
    Assign,
    Function,
    OpeningRoundBracket,
    Identifier {
        literal: "x",
    },
    Comma,
    Identifier {
        literal: "y",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Identifier {
        literal: "x",
    },
    Plus,
    Identifier {
        literal: "y",
    },
    ClosingCurlyBracket,
    SemiColon,
    Identifier {
        literal: "add",
    },
    OpeningRoundBracket,
    Integer {
        literal: 1,
    },
    Comma,
    Integer {
        literal: 2,
    },
    Comma,
    Integer {
        literal: 3,
    },
    ClosingRoundBracket,
    SemiColon,
]
