src/tests/evaluation_error/wrong_number_of_arguments/snapshots/monkey_interpreter__tests__evaluation_error__wrong_number_of_arguments__test_wrong_number_of_arguments_case_3_lexical_analysis.snap
---
source: src/tests/evaluation_error/wrong_number_of_arguments/mod.rs
expression: tokens
---
[
    Function,
    OpeningRoundBracket,
    Identifier {
        literal: "x",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Identifier {
        literal: "x",
    },
    ClosingCurlyBracket,
    OpeningRoundBracket,
    ClosingRoundBracket,
    SemiColon,
]
