src/tests/evaluation_error/wrong_number_of_arguments/snapshots/monkey_interpreter__tests__evaluation_error__wrong_number_of_arguments__test_wrong_number_of_arguments_case_4_syntax_analysis.snap
---
source: src/tests/evaluation_error/wrong_number_of_arguments/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Call {
            function: Function {
                parameters: [],
                block: Block {
                    nodes: [
                        Expression {
                            expression: Integer {
                                literal: 5,
                            },
                        },
                    ],
                },
            },
            arguments: [
                Integer {
                    literal: 1,
                },
            ],
        },
    },
]
